--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin-bottom: 100px;
 }
 .bg{
-    background-color: #fceae8;
+    background-color: #f8d9d5;
     border-radius: 10px;
 }
 .carousel-item{
@@ -32,6 +32,19 @@
 .container h1{
     color: white;
 }
-.container img{
-    width: 100px;
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+    border-radius: 10px;
 }
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
+#subscribe{
+    height: 300px;
+}
+footer{
+    text-align: center;
+}
+
